# vino-students

./: .dockerignore  .env  .gitignore  APIendpoint.py  Dockerfile  NewKBDocuments.md  README.md  chunking.py  chunking_config.py  chunking_copy.py  config.py  database.py  debug_chunking.py  debug_pdf_toc.py  debug_summary.py  docker-compose.yml  document_processor.py  file_utils.py  llm_interaction.py  main.py  models.py  prompts.py  pyproject.toml  pyvenv.cfg  requirement.txt  requirements.txt  rxconfig.py  simple_pdf_converter.py  sql_upload.py  supa.py  upload_supa.py  upload_supa_chroma.py
.web/: env.json  package.json  reflex.install_frontend_packages.cached  reflex.json
.web/pages/: _app.js  index.js
.web/utils/: context.js
Scripts/: activate  activate.bat  activate.fish
chromadb/: chroma.sqlite3
debug/: debug_file_processing.py  practical_debug.py  simple_debug.py
docs/architecture/: system-design.md
docs/process/: development.html  development.md  navbar.md
docs/process/Margarita/: adv_chunking.md  db.md  debug.md  kb_struc.md  navbar.md  supabase.md
documents/: compan.txt
kb/: SCRUM.md
kb_new/: SCRUM.md
my_chat_app/: .gitignore  requirements.txt  rxconfig.py
my_chat_app/my_chat_app/: my_chat_app.py
vino_students/: state.py  style.py  vino_students.py
